--- a/petmeetup_app/templates/dashboard.html
+++ b/petmeetup_app/templates/dashboard.html
@@ -2,7 +2,14 @@
 
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Add your common styles or include external CSS files here -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Pet Meet Up{% endblock %}</title>
@@ -64,6 +71,7 @@
             margin-right: 20px;
         }
     </style>
+
 </head>
 <body>
 
@@ -105,8 +113,10 @@
             </a>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-ggRxx0iMXtFO51KtgoVfFqgS9SAnxu9K3gY/Kf+5z33bF/XIrclDzqms3bOMstA3" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     {% block content %}{% endblock %}
-
-</body>
+ </body>
 </html>
