--- a/petmeetup_app/templates/dashboard.html
+++ b/petmeetup_app/templates/dashboard.html
@@ -20,9 +20,9 @@
         }
 
         .header {
-            background-color: #e0e0e0; /* Very light gray header background */
-            padding: 10px;
-            color: #333; /* Dark gray header text color */
+            background-color: #333;
+            padding: 15px;
+            color: #fff;
             text-align: center;
             display: flex;
             justify-content: space-between;
