--- a/petmeetup_app/templates/dashboard.html
+++ b/petmeetup_app/templates/dashboard.html
@@ -27,6 +27,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
     }
 
     .dashboard-container {
@@ -69,7 +70,7 @@
 
     .login-logout {
         text-decoration: none;
-        color: #333; /* Dark gray text color for login/logout links */
+        color: #fff;
         margin-right: 20px;
     }
 
