--- a/petmeetup_app/templates/base.html
+++ b/petmeetup_app/templates/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Pet Meet Up{% endblock %}</title>
+    <title>{% block title %}Tails Meet Up{% endblock %}</title>
     <!-- Add your common styles or include external CSS files here -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -70,7 +70,7 @@
 <body>
 
     <div class="header">
-        <h1><a href="{% url 'dashboard' %}" style="text-decoration: none; color: #fff;">Pet Meet Up</a></h1>
+        <h1><a href="{% url 'dashboard' %}" style="text-decoration: none; color: #fff;">Tails Meet Up</a></h1>
         <div>
             {% if user.is_authenticated %}
                 <a class="login-logout" href="{% url 'logout' %}">Logout</a>
