--- a/petmeetup_app/templates/dashboard.html
+++ b/petmeetup_app/templates/dashboard.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Pet Meet Up{% endblock %}</title>
+    <title>{% block title %}Tails Meet Up{% endblock %}</title>
     {% load static %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -90,7 +90,7 @@
 <body>
 
     <div class="header">
-        <h1>{% block header %}Pet Meet Up{% endblock %}</h1>
+        <h1>{% block header %}Tails Meet Up{% endblock %}</h1>
         <div>
             {% if user.is_authenticated %}
             <a class="login-logout" href="{% url 'logout' %}">Logout</a>
